Fix color contrast on discover page and footer

--- a/addon/components/osf-footer/style.scss
+++ b/addon/components/osf-footer/style.scss
@@ -5,6 +5,10 @@
     border-bottom: 1px solid #e5e5e5;
     width: 100%;
     color: #555;
+
+    a {
+        color: #255884;
+    }
 }
 
 .footer ul, .footer li {
